# chat-user-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
app/: __init__.py  database.py  main.py  models.py  routes.py  tables.sql
tests/: conftest.py  test_login.py  test_register.py  test_request_password_reset.py  test_update_password.py  test_user_search.py  test_verify_reset_token.py
user-service/: Dockerfile
user-service/app/: main.py
