 
[metadata]
name = app
version = 1.0.0
license = BSD-3-Clause
maintainer = Cody Gramlich
maintainer_email = cmgramli@ualberta.ca
description = User service for CATChat.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    Flask-Cors
    Flask-Mail
    SQLAlchemy
    PyJWT
    bcrypt
    wheel
    python-dotenv

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = app